# coins-detection

./: .gitignore  CMakeLists.txt  readme.md
data/images/: 100_1477154538_jpg.rf.07e6403b5f6f60086f9210f29dc44390.txt  105_1479344448_jpg.rf.8294c916108d378cc70891532609b54f.txt  105_1479344460_jpg.rf.15ddfa4c60159734b80113bd9f5c7f77.txt  10_1477147680_jpg.rf.1a6883830d44dcb920ebe7320c42fc51.txt  10_1477148982_jpg.rf.fac42baf7641c8ab66b6e8078bc400c6.txt  10_1477149054_jpg.rf.ac08aac5bf78bd09bf417c4313ab7158.txt  10_1477149108_jpg.rf.8b687e93bcae95e41f629e20aca3d919.txt  10_1477149120_jpg.rf.a246ebe4da9dafcc96abb09587120bdf.txt  10_1477186962_jpg.rf.1198e89e69b0c0495e166e52596902c9.txt  10_1477187088_jpg.rf.d5690ccc3c495272b63b554194fc0cb7.txt  125_1479424716_jpg.rf.ba419c31b23dec8ef771cf486c20e1b6.txt  15_1477788378_jpg.rf.4bf03569ee6ff70dbfe5df3b0e4ddc2c.txt  175_1479423504_jpg.rf.877a368dc448cfbd43768ae6bce8e20b.txt  60_1477843908_jpg.rf.546d0444c47dd36079308e350896b7e6.txt  60_1477843920_jpg.rf.2caef118947bf4c7220b64bc6b208a05.txt  80_1477850640_jpg.rf.b359a42885a05ac0ecd1083c6cf6ebc4.txt  80_1477850682_jpg.rf.92b3217fd92bf166e612d5ea4901fc65.txt
results/: metrics.txt
src/: coin_detector.cpp
